--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "cli": "^1.0.1",
     "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.7",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,9 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "form-data": "^4.0.0",
+    "google-translate-api": "^2.3.0",
+    "google-translate-api-x": "^10.6.8",
+    "helmet": "^7.1.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
@@ -34,7 +38,9 @@
     "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0",
     "sequelize": "^6.37.3",
-    "survey-core": "^1.11.7"
+    "survey-core": "^1.11.7",
+    "translate-google-api": "^1.0.4",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
